nginx/traefik-middle-strip-prefix.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix-1
  namespace: nginx-test
spec:
  stripPrefixRegex:
    regex:
      - /[^/]+/
