nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: nginx-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - name: nginx-port
              containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx
    
      volumes:
        - name: nginx-config
          hostPath:
            path: /data/infra/nginx
            type: Directory
