nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: nginx-test
spec:
  selector:
    app: nginx
  ports:
    - name: nginx-svc-port
      protocol: TCP
      port: 80
      targetPort: nginx-port
